--- a/gitops/infra/tailscale/deployment.yaml
+++ b/gitops/infra/tailscale/deployment.yaml
@@ -95,7 +95,7 @@ spec:
         - name: TS_ACCEPT_DNS
           value: "true"
         - name: TS_EXTRA_ARGS
-          value: "--advertise-routes=10.100.20.0/24 --advertise-tags=tag:inner-sanctum"
+          value: "--advertise-routes=10.100.20.0/24 --advertise-tags=tag:inner-sanctum --advertise-exit-node"
         - name: TS_AUTHKEY
           valueFrom:
             secretKeyRef:
@@ -114,10 +114,13 @@ spec:
         - "-c"
         - |
           export TS_HOSTNAME="tailscale-${POD_NAME}"
+          # Enable IP forwarding for exit node
+          sysctl -w net.ipv4.ip_forward=1
+          sysctl -w net.ipv6.conf.all.forwarding=1
           tailscaled --state=/var/lib/tailscale/tailscaled.state --statedir=/var/lib/tailscale --tun=userspace-networking &
           PID=$!
           sleep 5
-          if ! tailscale up --authkey="${TS_AUTHKEY}" --hostname="${TS_HOSTNAME}" --advertise-routes=10.100.20.0/24 --accept-dns=true --reset=false; then
+          if ! tailscale up --authkey="${TS_AUTHKEY}" --hostname="${TS_HOSTNAME}" --advertise-routes=10.100.20.0/24 --advertise-exit-node --accept-dns=true --reset=false; then
             echo "tailscale up failed"
             kill $PID
             exit 1
