--- a/gitops/infra/tailscale/deployment.yaml
+++ b/gitops/infra/tailscale/deployment.yaml
@@ -113,7 +113,7 @@ spec:
         args: 
         - "-c"
         - |
-          export TS_HOSTNAME="tailscale-${POD_NAME}"
+          export TS_HOSTNAME="${POD_NAME}"
           # Enable IP forwarding for exit node
           sysctl -w net.ipv4.ip_forward=1
           sysctl -w net.ipv6.conf.all.forwarding=1
