--- a/gitops/root-app.yaml
+++ b/gitops/root-app.yaml
@@ -269,7 +269,7 @@ spec:
   project: application
   sources:
     - repoURL: https://github.com/amerenda/amerenda-k3s.git
-      targetRevision: feat/schedule-entity
+      targetRevision: main
       path: gitops/apps/home-assistant
   destination:
     server: https://kubernetes.default.svc
