--- a/gitops/apps/home-assistant/deployment.yaml
+++ b/gitops/apps/home-assistant/deployment.yaml
@@ -160,10 +160,11 @@ spec:
               frontend:
                 themes: !include_dir_merge_named themes
         
-              # Load UI-managed files for Automations & Scenes (so the UI keeps working)
-              automation: !include automations.yaml
-              scene: !include scenes.yaml
-        
+      # Load UI-managed files for Automations & Scenes (so the UI keeps working)
+      automation: !include automations.yaml
+      automation manual: !include_dir_list automations
+      scene: !include scenes.yaml
+
               # Scripts managed as separate files under /config/scripts/*.yaml (dict merge)
               script: !include_dir_merge_named scripts
         
