--- a/gitops/apps/home-assistant/configuration/automations/guest_camera_privacy_wifi_away.yaml
+++ b/gitops/apps/home-assistant/configuration/automations/guest_camera_privacy_wifi_away.yaml
@@ -1,16 +1,16 @@
-alias: "Alex - Camera Privacy (WiFi Connected)"
+alias: "Guest - Camera Privacy (WiFi Disconnected)"
 mode: "restart"
 triggers:
   - trigger: "state"
-    entity_id: "device_tracker.pixel_9_pro_xl_2"
-    to: "home"
+    entity_id: "device_tracker.brayan_iphone"
+    from: "home"
 actions:
-  - action: "light.turn_off"
+  - action: "light.turn_on"
     target:
       entity_id:
         - "light.bedroom_status_led"
         - "light.living_room_status_led"
-  - action: "switch.turn_on"
+  - action: "switch.turn_off"
     target:
       entity_id:
         - "switch.bedroom_privacy_mode"
