--- a/gitops/apps/home-assistant/configuration/automations/alex_camera_privacy_away.yaml
+++ b/gitops/apps/home-assistant/configuration/automations/alex_camera_privacy_away.yaml
@@ -6,13 +6,4 @@ triggers:
     zone: "zone.home"
     event: "leave"
 actions:
-  - action: "light.turn_on"
-    target:
-      entity_id:
-        - "light.bedroom_status_led"
-        - "light.living_room_status_led"
-  - action: "switch.turn_off"
-    target:
-      entity_id:
-        - "switch.bedroom_privacy_mode"
-        - "switch.living_room_privacy_mode"
+  - action: script.manage_camera_privacy
