--- a/gitops/apps/home-assistant/configuration/automations/guest_camera_privacy_wifi_home.yaml
+++ b/gitops/apps/home-assistant/configuration/automations/guest_camera_privacy_wifi_home.yaml
@@ -2,16 +2,8 @@ alias: "Guest - Camera Privacy Home (WiFi Connected)"
 mode: "restart"
 triggers:
   - trigger: "state"
-    entity_id: "device_tracker.brayan_iphone"
+    entity_id:
+      - "group.guests"
     to: "home"
 actions:
-  - action: "light.turn_off"
-    target:
-      entity_id:
-        - "light.bedroom_status_led"
-        - "light.living_room_status_led"
-  - action: "switch.turn_on"
-    target:
-      entity_id:
-        - "switch.bedroom_privacy_mode"
-        - "switch.living_room_privacy_mode"
+  - action: script.manage_camera_privacy
