--- a/gitops/apps/home-assistant/calendar-script-configmap.yaml
+++ b/gitops/apps/home-assistant/calendar-script-configmap.yaml
@@ -11,11 +11,11 @@ data:
     set -e
     
     CALENDAR_URL="https://outlook.office365.com/owa/calendar/96b4509ebff1403fb979cc5d1a19b192@jainglobal.com/2ba2f72869cd482e99af95f77b227b7e17421443293132355961/calendar.ics"
-    OUTPUT_FILE="/config/.storage/local_calendar.work.ics"
+    OUTPUT_FILE="/config/www/calendar_cache/local_calendar.work.ics"
     TEMP_FILE="${OUTPUT_FILE}.tmp"
-    
+
     # Ensure .storage directory exists
-    mkdir -p /config/.storage
+    mkdir -p /config/www/calendar_cache
     
     echo "[Calendar-Cache] Starting calendar download from ${CALENDAR_URL}"
     
