--- a/gitops/apps/home-assistant/deployment.yaml
+++ b/gitops/apps/home-assistant/deployment.yaml
@@ -221,6 +221,7 @@ spec:
                     - name: "Work"
                       url: "http://localhost:8123/local/calendar_cache/local_calendar.work.ics"
                       include_resource: true
+                      summary_default: "Work"
 
               # Media sources - expose local media folders to Media dashboard
               media_source: {}
