--- a/gitops/apps/home-assistant/dashboards-configmap.yaml
+++ b/gitops/apps/home-assistant/dashboards-configmap.yaml
@@ -1353,8 +1353,7 @@ data:
                   show_header_toggle: false
                 filter:
                   include:
-                    - attributes:
-                        friendly_name: "Atlantic Av*"
+                    - entity_id: "sensor.*atlantic_av*"
                       options:
                         secondary_info: last-updated
                   exclude:
@@ -1363,7 +1362,7 @@ data:
                 sort:
                   method: attribute
                   attribute: route_id
-                  
+    
               - type: custom:auto-entities
                 card:
                   type: entities
@@ -1371,8 +1370,7 @@ data:
                   show_header_toggle: false
                 filter:
                   include:
-                    - attributes:
-                        friendly_name: "Bergen St*"
+                    - entity_id: "sensor.*bergen_st*"
                       options:
                         secondary_info: last-updated
                   exclude:
@@ -1389,8 +1387,7 @@ data:
                   show_header_toggle: false
                 filter:
                   include:
-                    - attributes:
-                        friendly_name: "Fulton St*"
+                    - entity_id: "sensor.*fulton_st*"
                       options:
                         secondary_info: last-updated
                   exclude:
@@ -1407,8 +1404,7 @@ data:
                   show_header_toggle: false
                 filter:
                   include:
-                    - attributes:
-                        friendly_name: "Lafayette Av*"
+                    - entity_id: "sensor.*lafayette_av*"
                       options:
                         secondary_info: last-updated
                   exclude:
@@ -1425,8 +1421,7 @@ data:
                   show_header_toggle: false
                 filter:
                   include:
-                    - attributes:
-                        friendly_name: "57 St*"
+                    - entity_id: "sensor.*57_st*"
                       options:
                         secondary_info: last-updated
                   exclude:
@@ -1446,13 +1441,10 @@ data:
               show_header_toggle: false
             filter:
               include:
-                # Atlantic Av - Northbound (N/Q/D)
-                # Logic: Match station AND route AND typically Northbound destinations
                 - domain: sensor
+                  entity_id: "*atlantic_av*"
                   attributes:
-                    friendly_name: "Atlantic Av*"
                     route_id: ["N", "Q", "D"]
-                    # Common Northbound/Manhattan/Queens/Bronx terminals
                     headsign: ["Astoria*", "96 St*", "Manhattan*", "Midtown*", "205 St*", "Bedford*", "168 St*", "Jamaica*", "57 St*", "Forest Hills*", "Ditmars*"]
                   options:
                     secondary_info: "[[ attribute.headsign ]]"
@@ -1472,19 +1464,17 @@ data:
               title: Evening Commute (Southbound)
               show_header_toggle: false
             filter:
-              include:
-                # 57 St - Southbound (N/Q/R/W)
-                - domain: sensor
-                  attributes:
-                    friendly_name: "57 St*"
-                    route_id: ["N", "Q", "R", "W"]
-                    # Common Southbound/Brooklyn terminals
-                    headsign: ["Coney Island*", "Brighton Beach*", "Sea Beach*", "Bay Ridge*", "Whitehall*", "95 St*", "Stillwell*", "Church*", "Kings Hwy*"]
-                  options:
-                    secondary_info: "[[ attribute.headsign ]]"
-              exclude:
-                - state: "unavailable"
-                - state: "unknown"
+              template: |
+                [
+                  {% for state in states.sensor -%}
+                    {%- if '57_st' in state.entity_id and state.attributes.route_id in ['N', 'Q', 'R', 'W'] and state.state not in ['unavailable', 'unknown'] -%}
+                      {
+                        "entity": "{{ state.entity_id }}",
+                        "secondary_info": "{{ state.attributes.headsign }}"
+                      },
+                    {%- endif -%}
+                  {%- endfor %}
+                ]
             sort:
               method: state
               numeric: true
@@ -1492,7 +1482,6 @@ data:
       - title: Dynamic
         icon: mdi:map-marker-radius
         cards:
-          # Show Morning Commute if NOT at Work (e.g. Home or Away)
           - type: conditional
             conditions:
               - entity: device_tracker.pixel_9_pro_xl
@@ -1506,18 +1495,19 @@ data:
                 show_header_toggle: false
               filter:
                 include:
-                  - domain: sensor
+                  - entity_id: "sensor.*atlantic_av*"
                     attributes:
-                      friendly_name: "Atlantic Av*"
                       route_id: ["N", "Q", "D"]
                       headsign: ["Astoria*", "96 St*", "Manhattan*", "Midtown*", "205 St*", "Bedford*", "168 St*", "Jamaica*", "57 St*", "Forest Hills*", "Ditmars*"]
                     options:
                       secondary_info: "[[ attribute.headsign ]]"
-                sort:
-                  method: state
-                  numeric: true
+                exclude:
+                  - state: "unavailable"
+                  - state: "unknown"
+              sort:
+                method: state
+                numeric: true
     
-          # Show Evening Commute if AT Work
           - type: conditional
             conditions:
               - entity: device_tracker.pixel_9_pro_xl
@@ -1531,17 +1521,18 @@ data:
                 show_header_toggle: false
               filter:
                 include:
-                  - domain: sensor
+                  - entity_id: "sensor.*57_st*"
                     attributes:
-                      friendly_name: "57 St*"
                       route_id: ["N", "Q", "R", "W"]
                       headsign: ["Coney Island*", "Brighton Beach*", "Sea Beach*", "Bay Ridge*", "Whitehall*", "95 St*", "Stillwell*", "Church*", "Kings Hwy*"]
                     options:
                       secondary_info: "[[ attribute.headsign ]]"
-                sort:
-                  method: state
-                  numeric: true
-    
+                exclude:
+                  - state: "unavailable"
+                  - state: "unknown"
+              sort:
+                method: state
+                numeric: true
   light_control.yaml: |
     views:
       - title: Light Control
